--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <mat-toolbar color="primary">
   <a routerLink="/" mat-button class="title">Spotify App</a>
   <div class="spacer">
+  </div>
+  <div>
     <form action="" class="search">
       <input type="text" class="search__input" autocapitalize="off" [matAutocomplete]="auto">
       <button class="search__button"><mat-icon class="mat-18">search</mat-icon></button>
