--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
       <p class="item__artist" *ngIf="item.artists">{{item.artists[0].name}}</p>
     </mat-card>
   </div>
-  <h3>Feature Playlist</h3>
+  <h3 style="margin-top: 50px">Feature Playlist</h3>
   <h4>{{playlistMessage}}</h4>
   <div class="grid">
     <mat-card
