--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,5 +34,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .container {
   max-width: 1024px;
   padding: 0 24px;
-  margin: 0 auto;
+  margin: 0 auto 32px auto;
 }
