--- a/src/app/album/album-detail/album-detail.component.html
+++ b/src/app/album/album-detail/album-detail.component.html
@@ -1,1 +1,13 @@
-<p>album-detail works!</p>
+<div class="container">
+  <div class="detail-card" *ngIf="album">
+    <h3>ALBUM Detail</h3>
+    <mat-card class="item">
+      <img src="{{album.images.length ? album.images[0].url : 'https://placehold.it/244x244'}}" alt="" matCardImage>
+      <h2>{{album.name}}</h2>
+      <p>{{album.artists[0].name}}</p>
+      <p>RELEASE DATE: {{album.release_date}}</p>
+      <p>TOTAL TRACKS: {{album.total_tracks}}</p>
+      <button (click)="goBack()" mat-raised-button color="primary">go back</button>
+    </mat-card>
+  </div>
+</div>
