feat(src/app/search/search-result/search-result.component): added a link to album detail to album card.
Closes #4

--- a/src/app/search/search-result/search-result.component.html
+++ b/src/app/search/search-result/search-result.component.html
@@ -18,6 +18,7 @@
       <mat-card
         class="item"
         *ngFor="let album of albums"
+        (click)="goDetail(album.id)"
       >
         <img src="{{album.images.length ? album.images[0].url : 'https://placehold.it/244x244'}}" alt="" matCardImage>
         <h2 class="item__name">{{album.name}}</h2>
