--- a/src/app/search/search-result/search-result.component.html
+++ b/src/app/search/search-result/search-result.component.html
@@ -6,6 +6,7 @@
       <mat-card
         class="item"
         *ngFor="let artist of artists"
+        (click)="goArtistDetail(artist.id)"
       >
         <img src="{{artist.images.length ? artist.images[0].url : 'https://placehold.it/244x244'}}" alt="" matCardImage>
         <h2 class="item__name">{{artist.name}}</h2>
