fix(src/app/search/search-result.component): fixed to no longer be an error when a search fails.

--- a/src/app/search/search-result/search-result.component.html
+++ b/src/app/search/search-result/search-result.component.html
@@ -2,7 +2,7 @@
   <h1>Search Result</h1>
   <div class="type-container">
     <h3>ARTIST</h3>
-    <div class="grid">
+    <div class="grid" *ngIf="artists.length >= 1; else noArtist">
       <mat-card
         class="item"
         *ngFor="let artist of artists"
@@ -12,10 +12,13 @@
         <h2 class="item__name">{{artist.name}}</h2>
       </mat-card>
     </div>
+    <ng-template #noArtist>
+      <p>No Artists</p>
+    </ng-template>
   </div>
   <div class="type-container">
     <h3 style="margin-top: 50px">ALBUM</h3>
-    <div class="grid">
+    <div class="grid" *ngIf="albums.length >= 1; else noAlbum">
       <mat-card
         class="item"
         *ngFor="let album of albums"
@@ -26,5 +29,8 @@
         <p class="item__artist" *ngIf="album.artists">{{album.artists[0].name}}</p>
       </mat-card>
     </div>
+    <ng-template #noAlbum>
+      <p>No Albums</p>
+    </ng-template>
   </div>
 </div>
