--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,16 +3,7 @@
   <div class="spacer">
   </div>
   <div>
-    <form action="" class="search">
-      <input type="text" class="search__input" autocapitalize="off" [matAutocomplete]="auto" [formControl]="searchWord">
-      <button class="search__button" (click)="search(searchWord.value)"><mat-icon class="mat-18">search</mat-icon></button>
-    </form>
-    <mat-autocomplete #auto="matAutocomplete">
-      <mat-option>xxx</mat-option>
-      <mat-option>xxx</mat-option>
-      <mat-option>xxx</mat-option>
-      <mat-option>xxx</mat-option>
-    </mat-autocomplete>
+    <app-search-form></app-search-form>
   </div>
 </mat-toolbar>
 
