--- a/src/app/playlist/playlist-detail/playlist-detail.component.html
+++ b/src/app/playlist/playlist-detail/playlist-detail.component.html
@@ -2,7 +2,7 @@
   <div class="detail-card" *ngIf="playlist">
     <h3>PLAYLIST Detail</h3>
     <mat-card class="item">
-      <img src="{{playlist.images.length ? playlist.images[0].url : 'https://placehold.it/244x244'}}" alt="" matCardImage>
+      <img src="{{playlist.images.length ? playlist.images[0].url : 'assets/image/no_image.png'}}" alt="" matCardImage>
       <h2>{{playlist.name}}</h2>
       <p>{{playlist.description}}</p>
       <div style="margin-bottom: 10px">
