--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
       *ngFor="let item of newReleaseItems"
       (click)="goAlbumDetail(item.id)"
     >
-      <img src="{{item.images[0].url}}" alt="" matCardImage>
+      <img src="{{item.images.length ? item.images[0].url : 'assets/image/no_image.png'}}" alt="" matCardImage>
       <h2 class="item__name">{{item.name}}</h2>
       <p class="item__artist" *ngIf="item.artists">{{item.artists[0].name}}</p>
     </mat-card>
@@ -19,7 +19,7 @@
       *ngFor="let playlist of featurePlaylists"
       (click)="goPlaylistDetail(playlist.id)"
     >
-      <img src="{{playlist.images[0].url}}" alt="" matCardImage>
+      <img src="{{playlist.images.length ? playlist.images[0].url : 'assets/image/no_image.png'}}" alt="" matCardImage>
       <h2 class="item__name">{{playlist.name}}</h2>
     </mat-card>
   </div>
