--- a/src/app/search/search-result/search-result.component.html
+++ b/src/app/search/search-result/search-result.component.html
@@ -8,7 +8,7 @@
         *ngFor="let artist of artists"
         (click)="goArtistDetail(artist.id)"
       >
-        <img src="{{artist.images.length ? artist.images[0].url : 'https://placehold.it/244x244'}}" alt="" matCardImage>
+        <img src="{{artist.images.length ? artist.images[0].url : 'assets/image/no_image.png'}}" alt="" matCardImage>
         <h2 class="item__name">{{artist.name}}</h2>
       </mat-card>
     </div>
@@ -24,7 +24,7 @@
         *ngFor="let album of albums"
         (click)="goAlbumDetail(album.id)"
       >
-        <img src="{{album.images.length ? album.images[0].url : 'https://placehold.it/244x244'}}" alt="" matCardImage>
+        <img src="{{album.images.length ? album.images[0].url : 'assets/image/no_image.png'}}" alt="" matCardImage>
         <h2 class="item__name">{{album.name}}</h2>
         <p class="item__artist" *ngIf="album.artists">{{album.artists[0].name}}</p>
       </mat-card>
