--- a/src/app/core/components/search-form/search-form.component.html
+++ b/src/app/core/components/search-form/search-form.component.html
@@ -1,5 +1,12 @@
 <form action="" class="search">
-  <input type="text" class="search__input" autocapitalize="off" [matAutocomplete]="auto" [formControl]="searchWord">
+  <input
+    type="text"
+    class="search__input"
+    autocapitalize="off"
+    [matAutocomplete]="auto"
+    [formControl]="searchWord"
+    placeholder="Search"
+  >
   <button class="search__button" (click)="search(searchWord.value)">
     <mat-icon class="mat-18">search</mat-icon>
   </button>
