feat(src/app/app.component): Fixed header. It follows you when you scroll.
Closes #17

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="header">
   <a routerLink="/" mat-button class="title">Spotify App</a>
   <div class="spacer">
   </div>
